--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: XXX # Please replace with your real name
+first_name: YapengNiu # Please replace with your real name
 middle_name: 
 last_name: 
 contact_note: >
