--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,19 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: YapengNiu # Please replace with your real name
-middle_name: 
-last_name: 
+title: ""
+first_name: Yapeng
+middle_name: ""
+last_name: Niu
 contact_note: >
-  Feel free to reach out via email.
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Senior student majoring in Software Engineering at Beijing University of Posts and Telecommunications, focusing on deep learning and large language models research. Research interests include reinforcement learning and LLM agents.
+  I'm a recent graduate seeking research opportunities in Reinforcement Learning and LLM-based Agents.
+description: >
+  Recent B.E. graduate in Software Engineering from Beijing University of Posts and Telecommunications (BUPT). 
+  Passionate about reinforcement learning, large language model agents, and robust sequential decision-making.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+keywords: reinforcement learning, LLM agents, AI, master student, BUPT
+lang: en
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://newniuuu.github.io # the base hostname & protocol for your site
